--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
-        const API_URL = 'https://script.google.com/macros/s/AKfycbwlrEDPRWmWDZS7KSDxcAXAHGYqoyKkY9dLwTYYntf6aIo_u1QrzknsDMy7P0RRXTnpPQ/exec';
+        const API_URL = 'https://script.google.com/macros/s/AKfycbzh2Ljga5V5yGpS_lyLsCdP5R23OXdHmIUHmsEhi8JVSV4C-_Aw9aqmbs_HLezAjSqWcg/exec';
         (function(){
             var userData//, vApp;
             function parseJwt (token) {
@@ -125,6 +125,7 @@
                                     this.list.my.unshift({
                                         id: result.message,
                                         uniqueID: userData.sub,
+                                        userName: userData.name,
                                         describe: this.newData.describe,
                                         url: this.newData.url,
                                         editing: false,
@@ -220,6 +221,7 @@
             };
             window.onSignIn = function(googleUser){
                 userData = parseJwt(googleUser.credential);
+                // console.log(userData);
                 userData.token = googleUser.credential;
                 while(vApp.list.my.length > 0){
                     let i = vApp.list.my.pop();
