縮小google登入按鈕的寬度

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <v-app-bar color="#666666" dark app>
                 <v-toolbar-title>大濕之音集合</v-toolbar-title>
                 <v-spacer></v-spacer>
-                <div style="display: flex; align-items: center;">
+                <div style="display: flex; align-items: center; margin-right: 10px;">
                     <div id="g_id_onload"
                         data-client_id="298834093151-666685j5no67jmtdnrg3plog499ad2hg.apps.googleusercontent.com"
                         data-context="signin"
@@ -273,7 +273,7 @@
                         data-auto_prompt="true">
                     </div>
                     <div class="g_id_signin"
-                        data-type="standard"
+                        data-type="icon"
                         data-shape="pill"
                         data-theme="filled_black"
                         data-text="signin_with"
